@@ -1,4 +1,7 @@
 
+2009-04-06 14:37 Ali aliov@xfce.org 
+	 * : Change brightness on scroll mouse events
+
 2009-04-06 10:54 Ali aliov@xfce.org 
 	 * : Fix a warning the inhibit panel plugin when full debug is enabled+make settings dialog correctly resizable
 
